# OpenPuzzle

./: LICENSE  apply_escaped_json_strings.sh  apply_eventbus_v1.sh  apply_execution_manager_v1.sh  apply_execution_session.sh  apply_live_progress.sh  apply_progress_persistence.sh  apply_progress_tracking_base.sh  apply_sprint_3_4.sh  apply_sprint_3_5.sh  apply_sprint_3_7.sh  apply_sprint_3_8.sh  apply_sprint_4_1_scheduler_execution.sh  apply_sprint_4_2_scheduler_db.sh  apply_sprint_4_3_command_builder.sh  apply_sprint_4_3_context_builder.sh  apply_sprint_4_3_startjob_method.sh  apply_sprint_4_3_startjob_scheduler.sh  cleanup_application_old_helpers.sh  refactor_application_test_commands.sh  register_process_test.sh
OpenPuzzle/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
OpenPuzzle/.github/workflows/: build.yml
OpenPuzzle/docs/: ARCHITECTURE.md  BITCRACK_PARSER.md  COMMUNITY_SYNC.md  EVENT_BUS.md  EXECUTION_ENGINE.md  EXECUTION_MANAGER.md  EXECUTION_SESSION.md  GITHUB_SETUP.md  TESTING.md
OpenPuzzle/include/openpuzzle/adapters/bitcrack/: BitCrackOutputParser.hpp
OpenPuzzle/include/openpuzzle/allocator/: RangeAllocator.hpp
OpenPuzzle/include/openpuzzle/core/: Application.hpp  EventBus.hpp  ExecutionContext.hpp  ExecutionManager.hpp  ExecutionRecord.hpp  ExecutionResult.hpp  ExecutionSession.hpp  IProcessRunner.hpp  ManagedExecutionSession.hpp  PopenProcessRunner.hpp  PosixProcessRunner.hpp  ProcessHandle.hpp  ProcessRunner.hpp  ProcessRunnerFactory.hpp  RecoveryManager.hpp  RecoveryState.hpp  Scheduler.hpp  WorkspaceManager.hpp
OpenPuzzle/include/openpuzzle/database/: Database.hpp
OpenPuzzle/include/openpuzzle/hardware/: GpuManager.hpp
OpenPuzzle/include/openpuzzle/models/: KeySpace.hpp  Models.hpp
OpenPuzzle/include/openpuzzle/performance/: AutoTuner.hpp  BenchmarkConfiguration.hpp  BenchmarkResult.hpp  BenchmarkRunner.hpp
OpenPuzzle/include/openpuzzle/tools/: ToolManager.hpp
OpenPuzzle/resources/community/: 71_external_ranges_sample.csv
OpenPuzzle/resources/puzzles/: 71.json
OpenPuzzle/scripts/: build.sh  doctor.sh  format.sh  smoke_test.sh  test.sh
OpenPuzzle/src/: main.cpp
OpenPuzzle/src/adapters/bitcrack/: BitCrackOutputParser.cpp
OpenPuzzle/src/allocator/: RangeAllocator.cpp
OpenPuzzle/src/core/: Application.cpp  EventBus.cpp  ExecutionManager.cpp  ExecutionRecord.cpp  ExecutionSession.cpp  ManagedExecutionSession.cpp  PosixProcessRunner.cpp  ProcessRunner.cpp  ProcessRunnerFactory.cpp  RecoveryManager.cpp  Scheduler.cpp  WorkspaceManager.cpp
OpenPuzzle/src/core/commands/: ApplicationTestCommands.cpp
OpenPuzzle/src/database/: Database.cpp
OpenPuzzle/src/hardware/: GpuManager.cpp
OpenPuzzle/src/models/: KeySpace.cpp
OpenPuzzle/src/performance/: AutoTuner.cpp  BenchmarkRunner.cpp
OpenPuzzle/src/tools/: ToolManager.cpp
OpenPuzzle/tests/: CMakeLists.txt
OpenPuzzle/tests/adapters/: BitCrackParserTests.cpp  BitCrackParserTotalTests.cpp
OpenPuzzle/tests/core/: EventBusTests.cpp  ExecutionContextEscapedCommandTests.cpp  ExecutionContextRecoveryTests.cpp  ExecutionContextTests.cpp  ExecutionLiveProgressTests.cpp  ExecutionManagerContextTests.cpp  ExecutionManagerTests.cpp  ExecutionProgressPersistenceTests.cpp  ExecutionRecordTests.cpp  ExecutionResultTests.cpp  ExecutionSessionTests.cpp  ManagedExecutionSessionTests.cpp  PosixProcessRunnerTests.cpp  PosixProcessRunnerTimeoutTests.cpp  ProcessHandleTests.cpp  ProcessRunnerTests.cpp  RecoveryManagerTests.cpp  RecoveryStateTests.cpp  SchedulerCommandBuilderTests.cpp  SchedulerContextBuilderTests.cpp  SchedulerDatabaseTests.cpp  SchedulerEventTests.cpp  SchedulerExecutionTests.cpp  SchedulerStartJobTests.cpp  SchedulerTests.cpp  WorkspaceManagerTests.cpp
OpenPuzzle/tests/integration/: ExecutionWorkspaceTests.cpp  ResumeCommandMissingStateTests.cpp  ResumeCommandTests.cpp  ResumeLatestCommandTests.cpp  ResumeRunCommandTests.cpp
OpenPuzzle/tests/performance/: AutoTunerTests.cpp  BenchmarkRunnerExecutionTests.cpp  BenchmarkRunnerTests.cpp
